media/error_tc/error_234.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_6vIzfSS.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_6vIzfSS.cpp:8:1: error: expected ';' before '}' token
 }
 ^
